# ed25519-openssh-signing

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  main.rs
